[package]
name = "ls-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["cargo"] }
colored = "2.0.4"
libc = "0.2.149"
systime_converter = "0.1.0"
users = "0.11.0"
